--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,34 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
-</head>
+    <head>
+        <!--? Website Title -->
+            <title>Collers</title>
+
+        <!--? Important Meta tags  -->
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=7">
+        <meta name="robots" content="index, follow"> <!-- Indiquent la façon dont les moteurs de recherche indexent-suivent le site -->
+        <meta name="keywords" content="chaussure, boutique, vente en ligne, collers"> <!-- Liste des mots clés pour le referencement du site -->
+        <meta name ="authors" content="Barthez Kenwou"> <!-- Indique l'auteur du site -->
+        <meta name="description" content="Collers, la grande boutique de pret à porter"> <!-- Fourni Bref description du constenu du site-->
+        <meta property="og:title" content="Collers, la grande boutique de pret à porter"> <!-- Specifie le titre du site pour les partages sur réseaux sociaux -->
+        <meta property="og:image" content="./assets/logo.svg"> <!-- Specifie l'image qui s'affiche lors du partage du site sur les éseaux sociaux -->
+        <meta name="apple-mobile-web-app-capable" content="yes"> <!-- indique que la page peut etre affiché en mode plein ecran sur les appareil apple -->
+        <meta name="apple-mobile-web-app-title" content="Collers, la grande boutique de pret à porter"> <!-- Indique le titrre de la page sur les appareil apple -->
+
+        <!--? Link Tailwind CSS File  -->
+        <link href="./output.css" rel="stylesheet">
+
+        <!--? Link Google Fonts  -->
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
+        <!--? Link Awesome Fonts  -->
+        <script src="https://kit.fontawesome.com/854f485498.js" crossorigin="anonymous"></script>
+
+        <!--? Link Favicon  -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png"><link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png"><link rel="manifest" href="/public/site.webmanifest">    
+    </head>
 <body>
   <h1 class="text-3xl font-bold underline">
     Hello world!
